# Legged-Robots-Bootcamp

./: README.md
biped_ctrl_scripts/: dynamics_bootcamp.py  setup.txt
biped_ctrl_scripts/1_hopper_dynamics/a_euler-lagrange/: double_pendulum.py
biped_ctrl_scripts/1_hopper_dynamics/b_bounce/: bounce.py
biped_ctrl_scripts/2_hopper_control/a_euler-lagrange/: projectile.py
biped_ctrl_scripts/2_hopper_control/b_hopper-control/: raibert_hopper.py
biped_ctrl_scripts/3_passive_walker/b_euler-lagrange/: double_pendulum.py
biped_ctrl_scripts/3_passive_walker/c_bounce/: bounce.py
biped_ctrl_scripts/3_passive_walker/d_walker/: passive_walker_fixpoint.py
biped_ctrl_scripts/4_walker_control/a_forward_kinematics/: forward_kinematics.py
biped_ctrl_scripts/4_walker_control/b_euler-lagrange/: projectile.py
biped_ctrl_scripts/4_walker_control/d_hopper/: hopper.py
biped_ctrl_scripts/4_walker_control/g_control_partitioning/double_pendulum/: double_pendulum_control_partitioning.py
biped_ctrl_scripts/4_walker_control/g_control_partitioning/single_pendulum/: single_pendulum_control_partitioning.py  single_pendulum_pd_control.py
biped_ctrl_scripts/4_walker_control/g_control_partitioning/spring_mass_damper/: spring_mass_damper_control.py
biped_ctrl_scripts/4_walker_control/h_walker_control/: passive_walker_fixpoint.py  walker_control_partitioning.py
biped_ctrl_scripts/4_walker_control/i_foot_placement/: walker_P_control.py  walker_nn_control.py  walker_pca_control.py
biped_ctrl_scripts/4_walker_control/i_foot_placement/data_n_model/: walker_data_gen.py
biped_ctrl_scripts/5_walker_3D_control/: README.md
biped_ctrl_scripts/5_walker_3D_control/a_rotation_3D/: bounce3D.py  rotation3D.py
biped_ctrl_scripts/5_walker_3D_control/c_walker/: passive_walker.py  passive_walker_fixpoint.py
biped_ctrl_scripts/5_walker_3D_control/e_control_partitioning/double_pendulum/: double_pendulum_cartesian_control.py  double_pendulum_control_partitioning.py  double_pendulum_traj_tracking.py
biped_ctrl_scripts/5_walker_3D_control/e_control_partitioning/single_pendulum/: fictitious_system_control_partitioning.py  single_pendulum.py
biped_ctrl_scripts/5_walker_3D_control/e_control_partitioning/spring_mass_damper/: spring_mass_damper.py
biped_ctrl_scripts/5_walker_3D_control/f_walker_3D/: walker_3D_control.py  walker_3D_control_fixpt.py
biped_ctrl_scripts/5_walker_3D_control/f_walker_3D/dynamics/: walker_3D_kinematics.py  (+7 more)
biped_ctrl_scripts/5_walker_3D_control/g_leg_3D/: leg3D_cartesian_control.py  leg3D_control_partitioning.py  leg3D_model.py  leg3D_viz.py
quadruped_ctrl_ros/: CMakeLists.txt  REAME.md
quadruped_ctrl_ros/include/quadruped_ctrl_ros/: ctrl_server.h  osqpwrapper.h
quadruped_ctrl_ros/launch/: ctrl.launch  joy.launch  wrench.launch
quadruped_ctrl_ros/launch/configs/: ctrl.yaml
quadruped_ctrl_ros/scripts/: jacobian_derivation.py
quadruped_ctrl_ros/src/: ctrl_IO.cpp  ctrl_keyboard_cmd.cpp  ctrl_math.cpp  ctrl_node.cpp  ctrl_passive.cpp  ctrl_server.cpp  ctrl_squiggle.cpp  ctrl_stand.cpp  ctrl_swing_leg.cpp  ctrl_target.cpp  ctrl_tip.cpp  ctrl_trot.cpp  keyboard_cmd.cpp  wrench.cpp
quadruped_ctrl_ros/src/ctrl/: balance.cpp  crawl.cpp  ctrl_IO.cpp  ctrl_math.cpp  ctrl_passive.cpp  ctrl_server.cpp  ctrl_target.cpp  gait.cpp  gait_ctrl.cpp  squiggle.cpp  swing_leg.cpp  trot.cpp  upright.cpp
quadruped_ctrl_ros/src/misc/: joy_receive.cpp  keyboard_cmd.cpp
quadruped_ctrl_ros/src/qpsolve/: lala.cpp  osqpwrapper.cpp
viz/: ctrller.pptx  ~$ctrller.pptx
(+79 files in other folders)
